--- a/.github/workflows/update-releases.yml
+++ b/.github/workflows/update-releases.yml
@@ -34,23 +34,10 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Cache pnpm modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8.6.10
-          run_install: true
-
       - name: Build
         run: |
           cd scripts
-          pnpm run build
+          npm run build
 
       - name: Checkout database repo
         uses: actions/checkout@v4
