--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,29 +7,31 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "build-test": "tsc --project tsconfig.test.json",
-    "build-and-test": "set GITHUB_ACTION=true && pnpm run build-test && pnpm run test",
+    "build-test": "tsc --project src/test/tsconfig.json",
+    "build-and-test": "set GITHUB_ACTION=true && npm run build-test && npm run test",
     "test": "node build/test/test.js",
     "lint": "eslint src"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@google-analytics/data": "^3.3.0",
-    "@octokit/action": "^4.0.10",
-    "@octokit/core": "^4.2.4",
-    "@octokit/plugin-retry": "^4.1.6",
-    "@octokit/plugin-throttling": "^4.3.2",
-    "@octokit/request-error": "^3.0.3",
-    "@octokit/types": "^9.3.2",
-    "@types/commonmark": "^0.27.9",
-    "@types/node": "^18.19.34",
-    "@types/sharp": "^0.31.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "commonmark": "^0.30.0",
-    "eslint": "^8.57.0",
-    "node-fetch": "^3.3.2",
-    "sharp": "^0.33.4",
-    "typescript": "^4.9.5"
+    "@actions/core": "1.11.1",
+    "@google-analytics/data": "5.1.0",
+    "@octokit/action": "7.0.1",
+    "@octokit/core": "6.1.4",
+    "@octokit/plugin-paginate-rest": "^11.6.0",
+    "@octokit/plugin-rest-endpoint-methods": "^13.5.0",
+    "@octokit/plugin-retry": "7.2.0",
+    "@octokit/plugin-throttling": "9.6.0",
+    "@octokit/request-error": "6.1.7",
+    "@octokit/types": "13.10.0",
+    "@types/commonmark": "0.27.9",
+    "@types/node": "22.13.16",
+    "@types/sharp": "0.31.1",
+    "@typescript-eslint/eslint-plugin": "8.29.0",
+    "@typescript-eslint/parser": "8.29.0",
+    "commonmark": "0.31.2",
+    "eslint": "9.23.0",
+    "node-fetch": "3.3.2",
+    "sharp": "0.33.5",
+    "typescript": "5.8.2"
   }
 }
