--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "target": "ES2024",
+    "module": "Node18",
+    "moduleResolution": "Node16",
     "outDir": "./build",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "src/test"]
+  "exclude": ["node_modules"]
 }
